small changes in structure

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "version": "0.0.1",
     "main": "./app.js",
     "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
     "dependencies": {
       "async": "latest",
       "mkdirp": "latest"
